# nlp-plus-cv

./: .gitignore  README.md  cv.ipynb  cv.py  experiment_cv.ipynb  experiment_cv.py  nlp.ipynb  nlp.py  pyproject.toml
__marimo__/session/: cv.py.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/cv-lego/: dataset.csv
